[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/enemy/character_0023.png" type="Texture" id=1]
[ext_resource path="res://assets/enemy/character_0021.png" type="Texture" id=2]
[ext_resource path="res://assets/enemy/character_0022.png" type="Texture" id=3]
[ext_resource path="res://Enemy.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 9.25 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11, 1.25 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 13.5, 9.25 )

[node name="Enemy" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.75 )
shape = SubResource( 2 )

[node name="FloorDetector" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 15 )
collision_mask = 2

[node name="Deathbox" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deathbox"]
position = Vector2( 0, -7.75 )
shape = SubResource( 3 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 2.75 )
shape = SubResource( 4 )

[connection signal="body_entered" from="Deathbox" to="." method="_on_Deathbox_body_entered"]
[connection signal="body_entered" from="Deathbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
